--- a/src/styles/editor.module.css
+++ b/src/styles/editor.module.css
@@ -1130,3 +1130,40 @@ body {
     animation: blink 1s ease;
     animation-iteration-count: infinite;
 }
+.desktop-misc-menu {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    position: absolute;
+    top: 70px;
+    left: 20px;
+    background-color: var(--primary);
+    border: 0.5px solid var(--outline);
+    padding: 5px;
+    border-radius: 15px;
+    box-shadow: 0px 0px 13px 1px rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(10px);
+    z-index: 9999999;
+    animation: slidein-from-bottom-special 0.2s ease;
+    max-width: 200px;
+}
+.desktop-misc-menu-item {
+    display: flex;
+    align-items: center;
+    padding: 5px;
+    border-radius: 10px;
+    user-select: none;
+    font-size: 10.5pt;
+}
+.desktop-misc-menu-item:hover {
+    background-color: var(--secondary);
+}
+.desktop-misc-menu-item img {
+    margin-right: 5px;
+    -webkit-user-drag: none;
+}
+.desktop-misc-menu-tip {
+    padding: 5px;
+    font-size: 10pt;
+    color: var(--outline);
+}
