--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 }
 body {
   margin: 0;
-  font-family: 'Radio Canada Big', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif, 'SECEmojis';
+  font-family: 'Radio Canada Big', 'Murecho', system-ui;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow-x: hidden;
