--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -45,7 +45,7 @@
     --tertiary: #3f3f3f;
     --outline: #636363;
     --secondary-disabled: rgba(80, 80, 80, 0.3);
-    --font: 'Radio Canada Big', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    --font: 'Radio Canada Big', 'Murecho', system-ui;
     --text: #efefef;
     --theme: #0080ff;
 }
